2005-08-24  Benoît Dejean  <benoit@placenet.org>

	* po/fr.po: Updated French translation.

2005-08-24  Benoît Dejean  <benoit@placenet.org>

	* monotone.cc:
	* commands.cc: Two more i18n strings.

2005-08-23  Benoît Dejean  <benoit@placenet.org>

	* lua.cc: boost::format vs. F.

2005-08-23  Nathaniel Smith  <njs@pobox.com>

	* AUTHORS: Add Benoît Dejean <benoit@placenet.org>.  Create new
	section for translators.  Add Benoît there too.

2005-08-23  Nathaniel Smith  <njs@pobox.com>

	* commands.cc: N_("") -> "".

2005-08-23  Nathaniel Smith  <njs@pobox.com>

	* commands.cc: Make all CMD() calls use N_() instead of _().
	(commands): Insert _() everywhere usage strings are used.  This is
	icky.

2005-08-23  Nathaniel Smith  <njs@pobox.com>

	* keys.cc (get_passphrase): Put back trailing ": " removed in
	recent i18n changes.

2005-08-23  Benoît Dejean  <benoit@placenet.org>

	* change_set.cc (dump_change_set): boost::format instead of F.
	* commands.cc (get_log_message, notify_if_multiple_heads,
	complete, CMD(attr)): Marked some strings for i18n. Replaced a
	multiline string by prefix_lines_with(). Merged strings.
	* diff_patch.cc (merge_provider::try_to_merge_files): Merged
	strings.
	* i18n.h: N_() stands for gettext_noop(), not plural.
	* keys.cc (get_passphrase): Fixed string surgery.
	* netsync.cc: i18nized tickers' labels. Added xgettext comment
	as tickers do not play well with multibytes characters (like é).
	(session::analyze_attachment): Fixed string surgery.
	(session::process_hello_cmd): Merged many strings.
	(session::process_data_cmd): Removed some leading/trailing
	whitespaces.
	* sanity.cc: Marked error prefixes for i18n.
	* ui.cc (tick_write_count::write_ticks): Reworked and fixed
	surgery. Merged some strings.

2005-08-23  Benoît Dejean  <benoit@placenet.org>

	* commands.cc (CMD*): _("") -> "" as _("") returns the PO
	header.

2005-08-23  Benoît Dejean  <benoit@placenet.org>

	* transforms.cc (check_idna_encoding): No i18n for unittests.
